--- a/MonthlyFundAutomation/requirements.txt
+++ b/MonthlyFundAutomation/requirements.txt
@@ -1,9 +1,7 @@
+envparse==0.2.0
+numpy==1.19.1
+pandas==1.1.0
 pyjarowinkler==1.8
-scipy==1.4.1
-numpy==1.18.3
-SQLAlchemy==1.3.15
-pandas==1.0.3
 python_dateutil==2.8.1
-
-python-dateutil~=2.8.1
-envparse~=0.2.0
+scipy==1.5.2
+SQLAlchemy==1.3.19
