--- a/FundRatingNSDL/nsdl_extraction/scrapy.cfg
+++ b/FundRatingNSDL/nsdl_extraction/scrapy.cfg
@@ -6,6 +6,6 @@
 [settings]
 default = nsdl_extraction.settings
 
-[deploy]
-#url = http://localhost:6800/
+[deploy:default]
+url = http://localhost:6800/
 project = nsdl_extraction
